--- a/BlogMaster/Components/Layout/NavMenu.razor
+++ b/BlogMaster/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="blogs">
                 <span class="bi bi-file-post icon-style" aria-hidden="true"></span> Blogs
             </NavLink>
         </div>
