--- a/BlogMaster.Client/_Imports.razor
+++ b/BlogMaster.Client/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlogMaster.Client
+@using BlogMaster.Shared.Components
+@using BlogMaster.Shared.Models
