--- a/BlogMaster/Components/Pages/Home.razor
+++ b/BlogMaster/Components/Pages/Home.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
+@inject NavigationManager navigationManager
 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+@code {
+    protected override void OnInitialized()
+    {
+        navigationManager.NavigateTo("/blogs");
+        base.OnInitialized();
+    }
+}
