--- a/BlogMaster.Client/Pages/PostDetails.razor
+++ b/BlogMaster.Client/Pages/PostDetails.razor
@@ -1,11 +1,11 @@
 ﻿@page "/postdetails/{Id:int}"
-@rendermode InteractiveServer
+@rendermode InteractiveAuto
 @using BlogMaster.Shared.Interfaces
 @using BlogMaster.Shared.Models
-
 @inject IBlogService blogService
 @inject NavigationManager navigationManager
 @inject PersistentComponentState applicationState
+@inject IWebAssemblyStateCacheService<BlogDto> stateCacheService
 @implements IDisposable
 
 @if (blogPost is null)
@@ -14,38 +14,52 @@
 }
 else
 {
-    <BlogPostDetailsContent BlogPost="blogPost" OnBack="GoBack" OnCommentAdded="HandleCommentAdded" />
+    <BlogPostDetailsContent BlogPost="blogPost"
+                            OnBack="GoBack"
+                            OnCommentAdded="HandleCommentAdded" />
 }
 
 @code {
     [Parameter]
     public int Id { get; set; }
 
-    private BlogDto blogPost = new();
+    private BlogDto? blogPost;
     private PersistingComponentStateSubscription? _subscription;
-    private TaskCompletionSource initializeCompletion = new(TaskCreationOptions.RunContinuationsAsynchronously);
+    private readonly TaskCompletionSource initializeCompletion = new(TaskCreationOptions.RunContinuationsAsynchronously);
 
     protected override async Task OnInitializedAsync()
     {
-        _subscription = applicationState.RegisterOnPersisting(PersistBlogPost);
-        if (applicationState.TryTakeFromJson<BlogDto>($"BlogPost_{Id}", out BlogDto? persistedBlogPost))
+        _subscription = applicationState.RegisterOnPersisting(PersistState);
+        string cacheKey = $"BlogPost_{Id}";
+
+        if (TryGetState(cacheKey))
         {
-            blogPost = persistedBlogPost!;
-        }
-        else
-        {
-            var existingBlog = await blogService.GetBlog(Id);
-            if (existingBlog is null)
+            blogPost = await blogService.GetBlog(Id);
+
+            if (blogPost is null)
             {
                 navigationManager.NavigateTo("/blogs");
                 return;
             }
 
-            blogPost = existingBlog;
+            stateCacheService.SetItem(cacheKey, blogPost);
         }
+        initializeCompletion.TrySetResult();
+    }
 
-        initializeCompletion.SetResult();
-        await base.OnInitializedAsync();
+    bool TryGetState(string cacheKey)
+    {
+        return !applicationState.TryTakeFromJson(cacheKey, out blogPost) &&
+            !stateCacheService.TryGetItem(cacheKey, out blogPost);
+    }
+
+    private Task PersistState()
+    {
+        if (blogPost is null) return Task.CompletedTask;
+
+        string cacheKey = $"BlogPost_{Id}";
+        applicationState.PersistAsJson(cacheKey, blogPost);
+        return Task.CompletedTask;
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -65,24 +79,26 @@ else
 
     async Task HandleCommentAdded(CommentDto comment)
     {
+        if (blogPost is null) return;
+
         blogPost.AddComment(comment);
         var updatedBlog = await blogService.UpdateBlog(blogPost);
         if (updatedBlog is not null)
         {
             blogPost = updatedBlog;
+            string cacheKey = $"BlogPost_{Id}";
+            stateCacheService.SetItem(cacheKey, blogPost);
         }
     }
 
     async Task IncrementView()
     {
+        if (blogPost is null) return;
+
         blogPost.ViewCount++;
         await blogService.UpdateBlog(blogPost);
-    }
-
-    private Task PersistBlogPost()
-    {
-        applicationState.PersistAsJson($"BlogPost_{Id}", blogPost);
-        return Task.CompletedTask;
+        string cacheKey = $"BlogPost_{Id}";
+        stateCacheService.SetItem(cacheKey, blogPost);
     }
 
     public void Dispose()
